2008-01-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: Bump version to 0.1.4

============ Version 0.1.3.1
2008-01-13  Carlos Diógenes  <cerdiogenes@gmail.com>

    * configure.ac: Fix AM_CONDITIONAL when no glitz lib found, bump version 
                    to 0.1.3.1

============ Version 0.1.3
2008-01-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac:
    * plugins/fade/Makefile.am:
    * plugins/freeze/Makefile.am:
    * plugins/menu-animation/Makefile.am:
    * plugins/opacity/Makefile.am:
    * plugins/shadow/Makefile.am:
    * src/Makefile.am: Remove stupid compilation optimisation use configure to
                       fix gcc options
    * NEWS: update to new release 0.1.3
    
2008-01-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * data/cairo-compmgr.desktop.in.in: Disable startup notification
    
    * plugins/menu-animation/ccm-menu-animation.c: Set damage region with scale
    
    * src/ccm-extension-loader.c:
    * src/ccm-extension-loader.h:
    * src/ccm-screen.c: Check filter plugins on loading instead on extension
                        loader creation
    
    * src/ccm-window.c: Add ccm_window_set_opaque_region
    
    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-buffered-shm.c: Flush surface in end of sync
    
    * src/ccm-region.c:
    * src/ccm.h: Add ccm_region_scale and ccm_region_shaped functions
    
    * src/ccm-pixmap-image.c: Fix crash on XCopyArea
    
    * plugins/shadow/ccm-shadow.c: Create two surface for shadow onr for right
                                   shadow and one for bottom shadow instead one
                                   big region with geometry size. Fix also
                                   shadow drawing
                                   
2008-01-12  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-backend.h:
    * src/ccm-window.c: Add CCM_IS_PIXMAP_BUFFERED macros and set pixmap 