@@ -1,3 +1,10 @@
+2008-01-15  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * plugins/shadow/ccm-shadow.c: Fix a crash if surface of ccm_window can't 
+                                   be created.
+    * src/ccm-region.c: add one pixel when scaling region, fix glitches on
+                        menu-animation.
+
 2008-01-13  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * configure.ac: Bump version to 0.1.4
